--- a/src/TimeReporting/Pages/Shared/_Layout.cshtml
+++ b/src/TimeReporting/Pages/Shared/_Layout.cshtml
@@ -27,6 +27,7 @@
                     <li class="nav-item">
                       <a class="nav-link text-dark" asp-area="" asp-page="/Report/Index">Report</a>
                     </li>
+                    @await Html.PartialAsync("_LoginPartial")
                   </ul>
                 </div>
             </div>
