Added some tests

--- a/src/TimeReporting/Pages/Report/_ReportsCurrentDay.cshtml
+++ b/src/TimeReporting/Pages/Report/_ReportsCurrentDay.cshtml
@@ -6,7 +6,7 @@
     </div>
     <div class="col">
       <div class="d-flex justify-content-between align-content-end">
-        <div>@Model.SelectedDate.ToString()</div>
+        <h1 data-testid="report-date">@Model.SelectedDate.Day.ToString()</h1>
         <button class="btn btn-info">Info</button>
       </div>
     </div>
