--- a/src/TimeReporting/Pages/Report/Index.cshtml
+++ b/src/TimeReporting/Pages/Report/Index.cshtml
@@ -7,7 +7,10 @@
   <div class="row min-vh-100">
     <aside class="col-4 border-end border-dark min-vh-100">
       <form hx-post="/report?handler=Day" hx-target="#day" hx-swap="innerHTML" hx-trigger="change">
-        <input asp-for="SelectedDate" class="form-control" />
+        <label for="SelectedDate" class="form-label">
+          Select date
+          <input data-testid="date-input" asp-for="SelectedDate" class="form-control"/>
+        </label>
         @Html.AntiForgeryToken()
       </form>
     </aside>
