Got started developing

--- a/src/TimeReporting/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/src/TimeReporting/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -1,4 +1,4 @@
-@inject SignInManager<CustomUser> SignInManager
+@inject SignInManager<Employee> SignInManager
 @{
     var hasExternalLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync()).Any();
 }
