--- a/src/TimeReporting/Pages/Shared/_Layout.cshtml
+++ b/src/TimeReporting/Pages/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
     <script src="https://unpkg.com/htmx.org@2.0.3"></script>
     <meta name="htmx-config" includeAspNetAntiforgeryToken="true" />
 </head>
-<body>
+<body class="min-vh-100">
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
@@ -22,12 +22,6 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                   <ul class="navbar-nav flex-grow-1">
-                    <li class="nav-item">
-                      <a class="nav-link text-dark" asp-page="/Index">Home</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link text-dark" asp-page="/Report/Index">Report</a>
-                    </li>
                     @await Html.PartialAsync("_LoginPartial")
                   </ul>
                 </div>
@@ -39,13 +33,6 @@
             @RenderBody()
         </main>
     </div>
-
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2024 - TimeReporting - <a asp-area="" asp-page="/Privacy">Privacy</a>
-        </div>
-    </footer>
-
 <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 <script src="~/js/site.js" asp-append-version="true"></script>
 <script src="~/js/toast.js" asp-append-version="true"></script>
