--- a/src/TimeReporting/Pages/Shared/_Layout.cshtml
+++ b/src/TimeReporting/Pages/Shared/_Layout.cshtml
@@ -7,11 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["title"] | Software</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <script src="https://unpkg.com/htmx.org@2.0.3"></script>
+    <script src="~/js/htmx.min.js"></script>
     <meta name="htmx-config" includeAspNetAntiforgeryToken="true" />
+    <script defer src="~/js/alpine-persist.min.js"></script>
+    <script defer src="~/js/alpine-core.min.js"></script>
 </head>
-<body class="min-vh-100">
+<body class="min-vh-100 position-relative">
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
