--- a/src/TimeReporting/Pages/Shared/_Layout.cshtml
+++ b/src/TimeReporting/Pages/Shared/_Layout.cshtml
@@ -1,49 +1,99 @@
 ﻿@using Htmx.TagHelpers
 @inject IWebHostEnvironment Environment
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["title"] | Software</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+  <!DOCTYPE html>
+  <html lang="en" data-bs-theme="auto">
+  <head>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>@ViewData["title"] - Time Reporting</title>
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true"/>
     <script src="~/js/htmx.min.js"></script>
-    <meta name="htmx-config" includeAspNetAntiforgeryToken="true" />
+    <meta name="htmx-config" includeAspNetAntiforgeryToken="true"/>
     <script defer src="~/js/alpine-persist.min.js"></script>
     <script defer src="~/js/alpine-core.min.js"></script>
-</head>
-<body class="min-vh-100 position-relative">
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">TimeReporting</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                  <ul class="navbar-nav flex-grow-1">
-                    @await Html.PartialAsync("_LoginPartial")
-                  </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
-    <div class="container">
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
+    <script src="~/js/bootstrap-auto-dark-mode.js"></script>
+  </head>
+  <body hx-boost="true">
+  <header class="flex-md-nowrap d-flex justify-content-end p-0 d-md-none" data-bs-theme="dark">
+    <ul class="navbar-nav flex-row">
+      <li class="nav-item text-nowrap">
+        <button class="nav-link px-3 text-dark" type="button" data-bs-toggle="offcanvas"
+                data-bs-target="#sidebarMenu" aria-controls="sidebarMenu"
+                aria-expanded="false" aria-label="Toggle navigation">
+          <i class="bi bi-list h1"></i>
+        </button>
+      </li>
+    </ul>
+  </header>
+
+  <div class="row">
+    <div class="sidebar border border-right col-md-3 col-lg-2 p-0 bg-body-tertiary position-fixed bottom-0 top-0 min-vh-100">
+      <div class="offcanvas-md offcanvas-end bg-body-tertiary" tabindex="-1" id="sidebarMenu"
+           aria-labelledby="sidebarMenuLabel">
+        <div class="offcanvas-header">
+          <h5 class="offcanvas-title" id="sidebarMenuLabel">Time Reporting</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="offcanvas" data-bs-target="#sidebarMenu"
+                  aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body d-md-flex flex-column p-0 pt-lg-3">
+          @await Html.PartialAsync("_LoginPartial")
+        </div>
+      </div>
     </div>
-<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-<script src="~/js/site.js" asp-append-version="true"></script>
-<script src="~/js/toast.js" asp-append-version="true"></script>
-@if (!Environment.IsProduction())
-{
-  <script src="~/js/htmxplaywright.js"></script>
-}
-@Html.HtmxAntiforgeryScript()
-    @await RenderSectionAsync("Scripts", required: false)
-</body>
-</html>
+    <main role="main" class="col-md-9 ms-sm-auto col-lg-10 px-md-4  mt-4">
+      @RenderBody()
+    </main>
+  </div>
+  @if (TempData["Toast-Success"] != null)
+  {
+    <div class="toast-container position-fixed bottom-0 end-0 p-3" style="z-index: 1055;">
+      <div id="liveToast" class="toast show text-bg-success" role="alert" aria-live="assertive" aria-atomic="true">
+        <div class="d-flex">
+          <div class="toast-body">
+            @TempData["Toast-Success"]
+          </div>
+          <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
+        </div>
+      </div>
+    </div>
+  }
+  @if (TempData["Toast-Danger"] != null)
+  {
+    <div class="toast-container position-fixed bottom-0 end-0 p-3" style="z-index: 1055;">
+      <div id="liveToast" class="toast show text-bg-danger" role="alert" aria-live="assertive" aria-atomic="true">
+        <div class="d-flex">
+          <div class="toast-body">
+            @TempData["Toast-Danger"]
+          </div>
+          <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
+        </div>
+      </div>
+    </div>
+  }
+  @if (TempData["Toast-Primary"] != null)
+  {
+    <div class="toast-container position-fixed bottom-0 end-0 p-3" style="z-index: 1055;">
+      <div id="liveToast" class="toast show text-bg-primary" role="alert" aria-live="assertive" aria-atomic="true">
+        <div class="d-flex">
+          <div class="toast-body">
+            @TempData["Toast-Primary"]
+          </div>
+          <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
+        </div>
+      </div>
+    </div>
+  }
+  <script src="~/lib/jquery/dist/jquery.min.js"></script>
+  <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="~/js/site.js" asp-append-version="true"></script>
+  <script src="~/js/toast.js" asp-append-version="true"></script>
+  @if (!Environment.IsProduction())
+  {
+    <script src="~/js/htmxplaywright.js"></script>
+  }
+  @Html.HtmxAntiforgeryScript()
+  @await RenderSectionAsync("Scripts", required: false)
+  </body>
+  </html>
