--- a/src/TimeReporting/Pages/Shared/_LoginPartial.cshtml
+++ b/src/TimeReporting/Pages/Shared/_LoginPartial.cshtml
@@ -4,28 +4,39 @@
 @inject SignInManager<Employee> SignInManager
 @inject UserManager<Employee> UserManager
 
-<ul class="navbar-nav">
+<div class="nav d-flex flex-column px-2 h-100 justify-content-between">
 @if (SignInManager.IsSignedIn(User))
 {
-  <li class="nav-item">
-    <a id="manage" class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link text-dark" asp-page="/Report/Index">Report</a>
-  </li>
-    <li class="nav-item">
-        <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/Index", new { area = "" })">
-            <button id="logout" type="submit" class="nav-link btn btn-link text-dark border-0">Logout</button>
-        </form>
+  <div>
+    <div class="d-flex flex-column align-items-center">
+      <h3>Time Reporting</h3>
+      <hr class="mb-3 w-100">
+    </div>
+    <ul class="nav flex-column">
+      <li class="nav-item fw-bold">
+        <a class="nav-link d-flex align-items-center gap-2" asp-page="/Report/Index"><i class="bi bi-clock"></i> Time Overview</a>
+      </li>
+    </ul>
+  </div>
+  <ul class="justify-content-end nav flex-column">
+    <hr class="my-3">
+    <li class="nav-item fw-bold">
+      <a id="manage" class="nav-link" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage"><i class="bi bi-person"></i> Profile</a>
     </li>
+    <li class="nav-item fw-bold">
+      <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/Index", new { area = "" })">
+        <button id="logout" type="submit" class="nav-link btn btn-link border-0"><i class="bi bi-door-closed text-light"></i> Sign out</button>
+      </form>
+    </li>
+  </ul>
 }
 else
 {
-    <li class="nav-item">
+    @*<li class="nav-item">
         <a class="nav-link text-dark" id="register" asp-area="Identity" asp-page="/Account/Register">Register</a>
     </li>
     <li class="nav-item">
         <a class="nav-link text-dark" id="login" asp-area="Identity" asp-page="/Account/Login">Login</a>
-    </li>
+    </li>*@
 }
-</ul>
+</div>
