--- a/src/TimeReporting/wwwroot/css/site.css
+++ b/src/TimeReporting/wwwroot/css/site.css
@@ -20,3 +20,12 @@ html {
 body {
   margin-bottom: 60px;
 }
+.bi {
+  color: black; /* Default color for light mode */
+}
+
+@media (prefers-color-scheme: dark) {
+  .bi {
+    color: white; /* Icon color for dark mode */
+  }
+}
