--- a/src/TimeReporting/Pages/Report/Index.cshtml
+++ b/src/TimeReporting/Pages/Report/Index.cshtml
@@ -4,43 +4,17 @@
 
 <section class="container min-vh-100">
   <div class="row">
-    <form class="col" hx-post="/report?handler=Day" hx-target="#day" hx-swap="innerHTML" hx-trigger="change">
-      <input data-testid="date-input" asp-for="SelectedDate" class="form-control" name="SelectedDate"/>
+    <form class="col-2" hx-post="/report?handler=Entries" hx-target="#entries" hx-swap="innerHTML" hx-trigger="change">
+      <input data-testid="date-input" asp-for="SelectedDate" class="form-control"/>
       @Html.AntiForgeryToken()
     </form>
-    <a asp-page="/Report/Create" class="btn btn-outline-success col"><i class="bi bi-plus-lg"></i></a>
+    <div class="col-9"></div>
+    <a asp-page="/Report/Create" class="btn btn-outline-success col-1"><i class="bi bi-plus-lg"></i></a>
   </div>
   <hr>
   <div class="row">
-    <div class="col">
-      <table class="table table-striped table-bordered">
-        <thead>
-        <tr>
-          <th>Customer</th>
-          <th>Hours</th>
-          <th></th>
-        </tr>
-        </thead>
-        <tbody id="day">
-        <tr>
-          <td>Apple</td>
-          <td>8</td>
-          <td class="d-flex justify-content-end gap-2">
-            <a asp-page="/Report/Edit" asp-route-id="" class="btn btn-outline-primary"><i class="bi bi-pencil"></i></a>
-            <a asp-page="/Report/Delete" asp-route-id="" class="btn btn-outline-danger"><i class="bi bi-trash"></i></a>
-            <button type="button" data-bs-toggle="collapse" class="btn btn-link" data-bs-target="#description-1" aria-expanded="false" aria-controls="description-1"><i class="bi bi-caret-down-fill"></i></button>
-          </td>
-        </tr>
-        <tr class="collapse" id="description-1">
-          <td colspan="3">
-            <label class="form-label">
-              Description
-              <textarea class="form-control" rows="8" cols="50" disabled>Great this is something that we worked on a lot and it really is not made for it</textarea>
-            </label>
-          </td>
-        </tr>
-        </tbody>
-      </table>
+    <div class="col" id="entries">
+      @await Html.PartialAsync("_ReportsCurrentDay", Model)
     </div>
   </div>
 </section>
