--- a/src/TimeReporting/Pages/Report/_ReportsCurrentDay.cshtml
+++ b/src/TimeReporting/Pages/Report/_ReportsCurrentDay.cshtml
@@ -1,14 +1,48 @@
 @model TimeReporting.Pages.Report.Index
 
-<div class="card">
-  <div class="row card-body">
-    <div class="col">
-    </div>
-    <div class="col">
-      <div class="d-flex justify-content-between align-content-end">
-        <h1 data-testid="report-date">@Model.SelectedDate.Day.ToString()</h1>
-        <button class="btn btn-info">Info</button>
-      </div>
-    </div>
-  </div>
-</div>
+@if (!Model.TimeEntries.Any())
+{
+  <h1>There are no time entries for this day.</h1>
+}
+else
+{
+  <table class="table table-striped table-bordered">
+    <thead>
+    <tr>
+      <th>Customer</th>
+      <th>Hours</th>
+      <th></th>
+    </tr>
+    </thead>
+    <tbody>
+    @foreach (var timeEntry in Model.TimeEntries)
+    {
+      <tr>
+        <td>@timeEntry.Customer</td>
+        <td>@timeEntry.Hours</td>
+        <td class="d-flex justify-content-end gap-2">
+          <a asp-page="/Report/Edit" asp-route-id="" class="btn btn-outline-primary"><i class="bi bi-pencil"></i></a>
+          <button
+            hx-delete
+            hx-page="Index"
+            hx-page-handler="Entries"
+            hx-route-id="@timeEntry.Id"
+            hx-target="closest tr"
+            hx-swap="outerHTML"
+            hx-confirm="Are you sure you want to delete this entry?"
+            class="btn btn-outline-danger"><i class="bi bi-trash"></i></button>
+          <button type="button" data-bs-toggle="collapse" class="btn btn-link" data-bs-target="#description-@timeEntry.Id" aria-expanded="false" aria-controls="description-@timeEntry.Id"><i class="bi bi-caret-down-fill"></i></button>
+        </td>
+      </tr>
+      <tr class="collapse" id="description-@timeEntry.Id">
+        <td colspan="3">
+          <label class="form-label">
+            Description
+            <textarea class="form-control" rows="8" cols="50" disabled>@timeEntry.Description</textarea>
+          </label>
+        </td>
+      </tr>
+    }
+    </tbody>
+  </table>
+}
