--- a/src/TimeReporting/Pages/_ViewImports.cshtml
+++ b/src/TimeReporting/Pages/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using TimeReporting
 @namespace TimeReporting.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, Htmx.TagHelpers
