--- a/src/TimeReporting/Pages/Report/_ReportsCurrentDay.cshtml
+++ b/src/TimeReporting/Pages/Report/_ReportsCurrentDay.cshtml
@@ -14,35 +14,79 @@ else
       <th></th>
     </tr>
     </thead>
-    <tbody>
     @foreach (var timeEntry in Model.TimeEntries)
     {
+      <tbody id="entry-@timeEntry.Id" x-data="{ editing: false}">
       <tr>
-        <td>@timeEntry.Customer</td>
-        <td>@timeEntry.Hours</td>
+        <td>
+          <select x-show="editing" asp-for="EditEntry.CustomerId" class="form-select">
+            @foreach (var customer in Model.Customers)
+            {
+              <option value="@customer.Id">@customer.Name</option>
+            }
+          </select>
+          <span x-show="!editing">@timeEntry.Customer</span>
+        </td>
+        <td>
+          <input x-show="editing" type="number" min="0" step="0.5" asp-for="EditEntry.Hours" value="@timeEntry.Hours" class="form-control"/>
+          <span x-show="!editing">@timeEntry.Hours</span>
+        </td>
         <td class="d-flex justify-content-end gap-2">
-          <a asp-page="/Report/Edit" asp-route-id="" class="btn btn-outline-primary"><i class="bi bi-pencil"></i></a>
+          <button x-show="!editing" class="btn btn-outline-primary" x-on:click="editing = true">
+            <i class="bi bi-pencil"></i>
+          </button>
+          <button
+            class="btn btn-success"
+            x-show="editing"
+            hx-post
+            hx-page="Index"
+            hx-page-handler="SubmitEditEntry"
+            hx-route-id="@timeEntry.Id"
+            hx-target="closest tbody"
+            hx-swap="outerHTML"
+          ><i class="bi bi-check"></i></button>
           <button
             hx-delete
             hx-page="Index"
             hx-page-handler="Entries"
             hx-route-id="@timeEntry.Id"
-            hx-target="closest tr"
+            hx-target="#entry-@timeEntry.Id"
             hx-swap="outerHTML"
             hx-confirm="Are you sure you want to delete this entry?"
             class="btn btn-outline-danger"><i class="bi bi-trash"></i></button>
-          <button type="button" data-bs-toggle="collapse" class="btn btn-link" data-bs-target="#description-@timeEntry.Id" aria-expanded="false" aria-controls="description-@timeEntry.Id"><i class="bi bi-caret-down-fill"></i></button>
+          <button x-show="!editing" type="button" data-bs-toggle="collapse" class="btn btn-link"
+                  data-bs-target="#description-@timeEntry.Id" aria-expanded="false"
+                  aria-controls="description-@timeEntry.Id">
+            <i class="bi bi-caret-down-fill"></i>
+          </button>
+          <button x-show="editing" x-on:click="editing = false" type="button" class="btn btn-outline-secondary">
+            <i class="bi bi-x"></i>
+          </button>
         </td>
       </tr>
-      <tr class="collapse" id="description-@timeEntry.Id">
-        <td colspan="3">
+      <tr x-bind:class="editing ? 'show' : ''" class="collapse" id="description-@timeEntry.Id">
+        <td x-show="!editing" colspan="3">
           <label class="form-label">
             Description
-            <textarea class="form-control" rows="8" cols="50" disabled>@timeEntry.Description</textarea>
+            <textarea class="form-control include-for-edit" rows="8" cols="50" disabled>@timeEntry.Description</textarea>
           </label>
         </td>
+        <td x-show="editing" colspan="2">
+          <div class="col-6">
+            <label asp-for="EditEntry.Description" class="form-label">Description</label>
+            <textarea class="form-control" rows="8" cols="50" asp-for="EditEntry.Description">@timeEntry.Description</textarea>
+            <span class="text-danger" asp-validation-for="EditEntry.Description"></span>
+          </div>
+        </td>
+        <td x-show="editing" colspan="1">
+          <div class="col-6">
+            <label asp-for="EditEntry.Date" class="form-label">Date</label>
+            <input asp-for="EditEntry.Date" type="date" value="@DateOnly.FromDateTime(DateTime.Now)" class="form-control"/>
+            <span class="text-danger" asp-validation-for="EditEntry.Date"></span>
+          </div>
+        </td>
       </tr>
+      </tbody>
     }
-    </tbody>
   </table>
 }
