--- a/src/TimeReporting/Pages/Shared/_LoginPartial.cshtml
+++ b/src/TimeReporting/Pages/Shared/_LoginPartial.cshtml
@@ -14,14 +14,14 @@
     </div>
     <ul class="nav flex-column">
       <li class="nav-item fw-bold">
-        <a class="nav-link d-flex align-items-center gap-2" asp-page="/Report/Index"><i class="bi bi-clock"></i> Time Overview</a>
+        <a class="nav-link d-flex align-items-center gap-2" x-target.push="main" asp-page="/Reports/Index"><i class="bi bi-clock"></i> Time Overview</a>
       </li>
     </ul>
   </div>
   <ul class="justify-content-end nav flex-column">
     <hr class="my-3">
     <li class="nav-item fw-bold">
-      <a id="manage" class="nav-link" asp-page="/Account/Manage/Index" title="Manage"><i class="bi bi-person"></i> Profile</a>
+      <a id="manage" class="nav-link" asp-page="/Account/Manage/Index" x-target.push="main" title="Manage"><i class="bi bi-person"></i> Profile</a>
     </li>
     <li class="nav-item fw-bold">
       <form id="logoutForm" class="form-inline" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/Index", new { area = "" })">
