--- a/src/TimeReporting/Pages/Shared/_Layout.cshtml
+++ b/src/TimeReporting/Pages/Shared/_Layout.cshtml
@@ -1,18 +1,12 @@
-﻿<!DOCTYPE html>
-<html lang="en" data-bs-theme="auto">
-<head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>@ViewData["title"] - Time Reporting</title>
-  <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css"/>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-  <link rel="stylesheet" href="~/css/site.css" asp-append-version="true"/>
-  <script defer src="~/js/alpine-persist.min.js"></script>
-  <script defer src="~/js/alpine-ajax.min.js"></script>
-  <script defer src="~/js/alpine-core.min.js"></script>
-  <script src="~/js/bootstrap-auto-dark-mode.js"></script>
-</head>
-<body>
+﻿@{
+  var headerExists = Context.Request.Headers.ContainsKey("X-Alpine-Request");
+
+  if (!headerExists)
+  {
+    Layout = "_RootLayout";
+  }
+}
+
 <header class="flex-md-nowrap d-flex justify-content-end p-0 d-md-none" data-bs-theme="dark">
   <ul class="navbar-nav flex-row">
     <li class="nav-item text-nowrap">
@@ -40,15 +34,26 @@
       </div>
     </div>
   </div>
-  <main role="main" class="col-md-9 ms-sm-auto col-lg-10 px-md-4  mt-4">
+  <main role="main" id="main" class="col-md-9 ms-sm-auto col-lg-10 px-md-4  mt-4">
     @RenderBody()
   </main>
 </div>
-<div id="toast" x-sync x-merge="append" class="toast-container position-fixed bottom-0 end-0 p-3"
-     style="z-index: 1055;">
-</div>
-<!--<script src="~/lib/jquery/dist/jquery.min.js"></script>-->
-<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+
+@{
+  var toastMessage = TempData["Toast-Message"] as string;
+  var toastType = TempData["Toast-Type"] as string;
+}
+@if (!string.IsNullOrEmpty(toastMessage) && !string.IsNullOrEmpty(toastType))
+{
+  <div id="toast" x-sync x-merge="append" class="toast-container position-fixed bottom-0 end-0 p-3" style="z-index: 1055;">
+    <div id="liveToast" x-data="{ show: true }" x-show="show" x-init="setTimeout(() => show = false, 3000)" class="toast show text-bg-@toastType" role="alert" aria-live="assertive" aria-atomic="true">
+      <div class="d-flex">
+        <div class="toast-body">
+          @toastMessage
+        </div>
+        <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
+      </div>
+    </div>
+  </div>
+}
 @await RenderSectionAsync("Scripts", required: false)
-</body>
-</html>
