--- a/src/TimeReporting/Pages/Shared/_Layout.cshtml
+++ b/src/TimeReporting/Pages/Shared/_Layout.cshtml
@@ -34,22 +34,25 @@
       </div>
     </div>
   </div>
-  <main role="main" id="main" class="col-md-9 ms-sm-auto col-lg-10 px-md-4  mt-4">
-    @RenderBody()
-  </main>
+  <div class="col-md-9 ms-sm-auto col-lg-10 px-md-4  mt-4">
+    <main role="main" id="main">
+      @RenderBody()
+    </main>
+  </div>
 </div>
 
 @{
-  var toastMessage = TempData["Toast-Message"] as string;
-  var toastType = TempData["Toast-Type"] as string;
+  var notificationMessage = TempData["Notification-Message"];
+  var notificationStatus = TempData["Notification-Type"];
 }
-@if (!string.IsNullOrEmpty(toastMessage) && !string.IsNullOrEmpty(toastType))
+
+@if (notificationMessage != null && notificationStatus != null)
 {
-  <div id="toast" x-sync x-merge="append" class="toast-container position-fixed bottom-0 end-0 p-3" style="z-index: 1055;">
-    <div id="liveToast" x-data="{ show: true }" x-show="show" x-init="setTimeout(() => show = false, 3000)" class="toast show text-bg-@toastType" role="alert" aria-live="assertive" aria-atomic="true">
+  <div id="toast" up-flashes class="toast-container position-fixed bottom-0 end-0 p-3" style="z-index: 1055;">
+    <div id="liveToast" x-data="{ show: true }" x-show="show" x-init="setTimeout(() => show = false, 3000)" class="toast show text-bg-@notificationStatus" role="alert" aria-live="assertive" aria-atomic="true">
       <div class="d-flex">
         <div class="toast-body">
-          @toastMessage
+          @notificationMessage
         </div>
         <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
       </div>
