code gen to add base pages for customer management, this will be rebuild but it is a good base for now.

--- a/src/TimeReporting/Pages/Reports/Create.cshtml
+++ b/src/TimeReporting/Pages/Reports/Create.cshtml
@@ -4,7 +4,7 @@
   Layout = "_Layout";
 }
 
-<form method="post" x-target.push="main">
+<form method="post" up-target="main">
   <h1>New time entry</h1>
   <hr>
     <div class="mb-3">
