--- a/src/TimeReporting/Pages/Reports/Index.cshtml
+++ b/src/TimeReporting/Pages/Reports/Index.cshtml
@@ -4,17 +4,21 @@
   Layout = "_Layout";
 }
 
-<section class="container min-vh-100" x-init>
+<section class="container min-vh-100">
   <div class="row">
-    <form class="col-2" method="get" up-target="#entries" up-autosubmit>
+    <form class="col-2" method="get" up-target=".entries" up-history="true" up-autosubmit>
       <input data-testid="date-input" asp-for="SelectedDate" class="form-control"/>
     </form>
     <div class="col-9"></div>
-    <a  href="@Url.Page("Create")" up-layer="new" up-follow class="btn btn-outline-success col-1"><i class="bi bi-plus-lg"></i></a>
+    <a  href="@Url.Page("Create")"
+        up-layer="new drawer"
+        up-accept-location="/Reports/?*"
+        up-on-accepted="up.reload('.entries')"
+        class="btn btn-outline-success col-1"><i class="bi bi-plus-lg"></i></a>
   </div>
   <hr>
   <div class="row">
-    <div class="col" id="entries">
+    <div class="col entries">
       @if (!Model.TimeEntries.Any())
 {
   <h1>There are no time entries for this day.</h1>
@@ -31,25 +35,15 @@ else
     </thead>
     @foreach (var timeEntry in Model.TimeEntries)
     {
-      <tbody id="entry-@timeEntry.Id" x-data="{ editing: false }">
+      <tbody class="entry-@timeEntry.Id">
       <tr>
         <td>
-          <select x-show="editing" asp-for="EditEntry.CustomerId" class="form-select">
-            @foreach (var customer in Model.Customers)
-            {
-              <option value="@customer.Id">@customer.Name</option>
-            }
-          </select>
           <span x-show="!editing">@timeEntry.Customer</span>
         </td>
         <td>
-          <input x-show="editing" type="number" min="0" step="0.5" asp-for="EditEntry.Hours" value="@timeEntry.Hours" class="form-control"/>
           <span x-show="!editing">@timeEntry.Hours</span>
         </td>
         <td class="d-flex justify-content-end gap-2">
-          <button x-show="!editing" class="btn btn-outline-primary" x-on:click="editing = true">
-            <i class="bi bi-pencil"></i>
-          </button>
           <button
             class="btn btn-success"
             x-show="editing"
@@ -58,9 +52,10 @@ else
             method="post"
             asp-page="Index"
             asp-page-handler="DeleteEntry"
-            x-target="entry-@timeEntry.Id"
             asp-route-id="@timeEntry.Id"
-            x-init x-on:ajax:before="confirm('Are you sure?') || $event.preventDefault()">
+            asp-route-selectedDate="@Model.SelectedDate.ToString("yyyy-MM-dd")"
+            up-confirm="Are you sure you want to delete this entry?"
+            up-target=".entries">
             <button class="btn btn-outline-danger" type="submit"><i class="bi bi-trash"></i></button>
             @Html.AntiForgeryToken()
           </form>
