--- a/src/TimeReporting/Pages/Customers/Create.cshtml
+++ b/src/TimeReporting/Pages/Customers/Create.cshtml
@@ -1,37 +1,24 @@
 @page
-@model TimeReporting.CreateModel
+@model CreateModel
 
 @{
   ViewData["Title"] = "Create";
   Layout = "~/Pages/Shared/_Layout.cshtml";
 }
 
-<h1>Create</h1>
+<section>
+  <h2>New Customer</h2>
+  <hr/>
+  <form method="post" asp-page="Create" up-target="main">
+    <input type="hidden" asp-for="Customer.Id" />
+    <div class="mb-3">
+      <label asp-for="Customer.Name" class="form-label"></label>
+      <input asp-for="Customer.Name" class="form-control"/>
+      <span asp-validation-for="Customer.Name" class="text-danger"></span>
+    </div>
+    @Html.AntiForgeryToken()
+    <button type="submit" class="btn btn-primary w-100">Add</button>
+  </form>
+</section>
 
-<h4>Customer</h4>
-<hr/>
-<div class="row">
-  <div class="col-md-4">
-    <form method="post">
-      <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-      <div class="form-group">
-        <label asp-for="Customer.Id" class="control-label"></label>
-        <input asp-for="Customer.Id" class="form-control"/>
-        <span asp-validation-for="Customer.Id" class="text-danger"></span>
-      </div>
-      <div class="form-group">
-        <label asp-for="Customer.Name" class="control-label"></label>
-        <input asp-for="Customer.Name" class="form-control"/>
-        <span asp-validation-for="Customer.Name" class="text-danger"></span>
-      </div>
-      <div class="form-group">
-        <input type="submit" value="Create" class="btn btn-primary"/>
-      </div>
-    </form>
-  </div>
-</div>
-
-<div>
-  <a asp-page="Index">Back to List</a>
-</div>
 
