--- a/src/TimeReporting/Pages/Customers/Index.cshtml
+++ b/src/TimeReporting/Pages/Customers/Index.cshtml
@@ -1,37 +1,54 @@
 @page
-@model TimeReporting.IndexModel
+@model IndexModel
 
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Pages/Shared/_Layout.cshtml";
 }
 
-<h1>Index</h1>
 
-<p>
-    <a asp-page="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
+<section class="container">
+  <div class="d-flex justify-content-between">
+    <h1 class="m-0">Customers</h1>
+    <a
+        asp-page="Create"
+        up-layer="new popup"
+        up-position="bottom"
+        up-align="right"
+        up-history="false"
+        up-accept-location="/Customers"
+        up-on-accepted="up.reload('.customers')"
+        class="btn btn-outline-success btn-lg d-flex justify-content-center align-items-center"><i class="bi bi-plus-lg"></i></a>
+  </div>
+  <hr>
+  <div class="customers">
+  @if(!Model.Customers.Any())
+  {
+    <p>No customers found.</p>
+  }
+  else
+  {
+    <table class="table table-striped table-bordered">
+      <thead>
+      <tr>
+        <th>Name</th>
+        <th>EIN</th>
+      </tr>
+      </thead>
+      <tbody>
+      @foreach (var customer in Model.Customers)
+      {
         <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Customer[0].Name)
-            </th>
-            <th></th>
+          <td>@customer.Name</td>
+          <td>
+            <a asp-page="./Edit" asp-route-id="@customer.Id">Edit</a> |
+            <a asp-page="./Details" asp-route-id="@customer.Id">Details</a> |
+          </td>
         </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model.Customer) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-page="./Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-page="./Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+      }
+      </tbody>
+    </table>
+  }
+  </div>
+</section>
+
