--- a/src/TimeReporting/Pages/Shared/_LoginPartial.cshtml
+++ b/src/TimeReporting/Pages/Shared/_LoginPartial.cshtml
@@ -17,6 +17,9 @@
         <a class="nav-link d-flex align-items-center gap-2" asp-page="/Reports/Index" up-target="main"><i class="bi bi-clock"></i> Time Overview</a>
       </li>
       <li class="nav-item fw-bold">
+        <a class="nav-link d-flex align-items-center gap-2" asp-page="/Projects/Index" up-target="main"><i class="bi bi-kanban"></i> Projects</a>
+      </li>
+      <li class="nav-item fw-bold">
         <a class="nav-link d-flex align-items-center gap-2" asp-page="/Customers/Index" up-target="main"><i class="bi bi-people"></i> Customers</a>
       </li>
     </ul>
