--- a/src/TimeReporting/Pages/Reports/Index.cshtml
+++ b/src/TimeReporting/Pages/Reports/Index.cshtml
@@ -14,6 +14,7 @@
         up-layer="new drawer"
         up-accept-location="/Reports/?*"
         up-on-accepted="up.reload('.entries')"
+        up-position="right"
         class="btn btn-outline-success col-1"><i class="bi bi-plus-lg"></i></a>
   </div>
   <hr>
