--- a/src/TimeReporting/Pages/Shared/_LoginPartial.cshtml
+++ b/src/TimeReporting/Pages/Shared/_LoginPartial.cshtml
@@ -4,34 +4,34 @@
 @inject SignInManager<Employee> SignInManager
 @inject UserManager<Employee> UserManager
 
-<div class="nav d-flex flex-column px-2 h-100 justify-content-between">
+<nav class="nav ms-2 d-flex flex-column h-100 justify-content-between">
 @if (SignInManager.IsSignedIn(User))
 {
   <div>
     <div class="d-flex flex-column align-items-center">
       <h3>Time Reporting</h3>
-      <hr class="mb-3 w-100">
+      <hr class="mb-3 mx-3 w-100">
     </div>
     <ul class="nav flex-column">
       <li class="nav-item fw-bold">
-        <a class="nav-link d-flex align-items-center gap-2" asp-page="/Reports/Index" up-target="main"><i class="bi bi-clock"></i> Time Overview</a>
+        <a class="nav-link d-flex align-items-center gap-2" asp-page="/Reports/Index" up-target="main"><i class="bi bi-clock text-primary"></i> Time Overview</a>
       </li>
       <li class="nav-item fw-bold">
-        <a class="nav-link d-flex align-items-center gap-2" asp-page="/Projects/Index" up-target="main"><i class="bi bi-kanban"></i> Projects</a>
+        <a class="nav-link d-flex align-items-center gap-2" asp-page="/Projects/Index" up-target="main"><i class="bi bi-kanban text-primary"></i> Projects</a>
       </li>
       <li class="nav-item fw-bold">
-        <a class="nav-link d-flex align-items-center gap-2" asp-page="/Customers/Index" up-target="main"><i class="bi bi-people"></i> Customers</a>
+        <a class="nav-link d-flex align-items-center gap-2" asp-page="/Customers/Index" up-target="main"><i class="bi bi-people text-primary"></i> Customers</a>
       </li>
     </ul>
   </div>
   <ul class="justify-content-end nav flex-column">
-    <hr class="my-3">
+    <hr class="my-3 mx-3">
     <li class="nav-item fw-bold">
-      <a id="manage" class="nav-link" asp-page="/Account/Manage/Index" x-target.push="main" title="Manage"><i class="bi bi-person"></i> Profile</a>
+      <a id="manage" class="nav-link" asp-page="/Account/Manage/Index" x-target.push="main" title="Manage"><i class="bi bi-person text-primary"></i> Profile</a>
     </li>
     <li class="nav-item fw-bold">
       <form id="logoutForm" class="form-inline" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/Index", new { area = "" })">
-        <button id="logout" type="submit" class="nav-link btn btn-link border-0"><i class="bi bi-door-closed text-light"></i> Sign out</button>
+        <button id="logout" type="submit" class="nav-link btn btn-link border-0"><i class="bi bi-door-closed text-primary"></i> Sign out</button>
       </form>
     </li>
   </ul>
@@ -45,4 +45,4 @@ else
         <a class="nav-link text-dark" id="login" asp-area="Identity" asp-page="/Account/Login">Login</a>
     </li>*@
 }
-</div>
+</nav>
