--- a/src/TimeReporting/Pages/Shared/_LoginPartial.cshtml
+++ b/src/TimeReporting/Pages/Shared/_LoginPartial.cshtml
@@ -14,13 +14,13 @@
     </div>
     <ul class="nav flex-column">
       <li class="nav-item fw-bold">
-        <a class="nav-link d-flex align-items-center gap-2" asp-page="/Reports/Index" up-target="main"><i class="bi bi-clock text-primary"></i> Time Overview</a>
+        <a class="nav-link d-flex align-items-center gap-2" asp-page="/Reports/Index" up-alias="/Reports/*" up-target="main"><i class="bi bi-clock text-primary"></i> Time Overview</a>
       </li>
       <li class="nav-item fw-bold">
-        <a class="nav-link d-flex align-items-center gap-2" asp-page="/Projects/Index" up-target="main"><i class="bi bi-kanban text-primary"></i> Projects</a>
+        <a class="nav-link d-flex align-items-center gap-2" asp-page="/Projects/Index" up-alias="/Projects/*" up-target="main"><i class="bi bi-kanban text-primary"></i> Projects</a>
       </li>
       <li class="nav-item fw-bold">
-        <a class="nav-link d-flex align-items-center gap-2" asp-page="/Customers/Index" up-target="main"><i class="bi bi-people text-primary"></i> Customers</a>
+        <a class="nav-link d-flex align-items-center gap-2" asp-page="/Customers/Index" up-alias="/Customers/*" up-target="main"><i class="bi bi-people text-primary"></i> Customers</a>
       </li>
     </ul>
   </div>
