--- a/src/TimeReporting/Pages/Projects/Details.cshtml
+++ b/src/TimeReporting/Pages/Projects/Details.cshtml
@@ -5,31 +5,42 @@
     Layout = "_Layout";
 }
 
-<div>
-    <h4>Project</h4>
-    <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Project.Name)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Project.Name)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Project.Description)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Project.Description)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Project.Customer)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Project.Customer.Id)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-page="./Edit" asp-route-id="@Model.Project.Id">Edit</a> |
-    <a asp-page="./Index">Back to List</a>
+<div class="container d-flex flex-column gap-4">
+  <section>
+    <div class="card mb-4">
+      <div class="card-body">
+        <h1 class="h4 card-title">@Model.Project.Name @Model.Project.Customer</h1>
+        <p class="card-text">@Model.Project.Description</p>
+        <ul class="list-unstyled">
+          <li><strong>Customer:</strong> @Model.Project.Customer</li>
+          <li><strong>Status:</strong> <span class="badge bg-success">Active</span></li>
+          <li><strong>Total Hours Logged:</strong> @Model.Project.TotalHours</li>
+        </ul>
+      </div>
+    </div>
+  </section>
+  <section>
+    <h3 class="h5 mb-3">Time Logs</h3>
+    <div class="table-responsive">
+      <table class="table table-hover">
+        <thead>
+        <tr>
+          <th scope="col">Date</th>
+          <th scope="col">Employee</th>
+          <th scope="col">Hours</th>
+        </tr>
+        </thead>
+        <tbody>
+        @foreach (var log in Model.Project.TimeEntries)
+        {
+          <tr>
+            <td>@log.Date</td>
+            <td>@log.Employee</td>
+            <td>@log.Hours</td>
+          </tr>
+        }
+        </tbody>
+      </table>
+    </div>
+  </section>
 </div>
