Got started on the details of a project page, this will show alot of metrics on a current project.

--- a/src/TimeReporting/Pages/Projects/Details.cshtml
+++ b/src/TimeReporting/Pages/Projects/Details.cshtml
@@ -15,6 +15,7 @@
           <li><strong>Customer:</strong> @Model.Project.Customer</li>
           <li><strong>Status:</strong> <span class="badge bg-success">Active</span></li>
           <li><strong>Total Hours Logged:</strong> @Model.Project.TotalHours</li>
+          <li><strong>Total Billed Amount:</strong> @Model.Project.TotalBilledAmount $</li>
         </ul>
       </div>
     </div>
