--- a/src/TimeReporting/Pages/Reports/Create.cshtml
+++ b/src/TimeReporting/Pages/Reports/Create.cshtml
@@ -28,11 +28,21 @@
       </a>
       <span class="text-danger" asp-validation-for="NewEntry.ProjectId"></span>
     </div>
-    <div class="mb-3">
-      <label asp-for="NewEntry.Hours" class="form-label">Hours</label>
-      <input type="number" min="0" step="0.5" asp-for="NewEntry.Hours" class="form-control"/>
-      <span class="text-danger" asp-validation-for="NewEntry.Hours"></span>
-    </div>
+  <div class="mb-3">
+    <label asp-for="NewEntry.Hours" class="form-label">Hours</label>
+    <input type="number" min="0" step="0.5" asp-for="NewEntry.Hours" class="form-control"/>
+    <span class="text-danger" asp-validation-for="NewEntry.Hours"></span>
+  </div>
+  <div class="mb-3">
+    <label asp-for="NewEntry.WorkTypeId" class="form-label">Work type</label>
+    <select asp-for="NewEntry.WorkTypeId" class="form-select work-type-selection">
+      <option value="">Select a work type</option>
+      @foreach (var workType in Model.WorkTypes)
+      {
+        <option value="@workType.Id">@workType.Name</option>
+      }
+    </select>
+  </div>
     <div class="mb-3">
       <label asp-for="NewEntry.Description" class="form-label">Description</label>
       <textarea asp-for="NewEntry.Description" class="form-control"></textarea>
