--- a/src/TimeReporting/Pages/Reports/Index.cshtml
+++ b/src/TimeReporting/Pages/Reports/Index.cshtml
@@ -29,8 +29,9 @@ else
   <table class="table table-striped table-bordered">
     <thead>
     <tr>
-      <th>Customer</th>
+      <th>Project</th>
       <th>Hours</th>
+      <th>Worktype</th>
       <th></th>
     </tr>
     </thead>
@@ -39,10 +40,13 @@ else
       <tbody class="entry-@timeEntry.Id">
       <tr>
         <td>
-          <span x-show="!editing">@timeEntry.Customer</span>
+          <span>@timeEntry.Project</span>
         </td>
         <td>
-          <span x-show="!editing">@timeEntry.Hours</span>
+          <span>@timeEntry.Hours</span>
+        </td>
+        <td>
+          <span>@timeEntry.WorkType</span>
         </td>
         <td class="d-flex justify-content-end gap-2">
           <button
