Fixed a issue if the hourly rate changes, now the application can handle that the right way.

--- a/src/TimeReporting/Pages/Projects/Details.cshtml
+++ b/src/TimeReporting/Pages/Projects/Details.cshtml
@@ -28,7 +28,9 @@
         <tr>
           <th scope="col">Date</th>
           <th scope="col">Employee</th>
+          <th scope="col">Work Type</th>
           <th scope="col">Hours</th>
+          <th scope="col">Hourly Rate</th>
         </tr>
         </thead>
         <tbody>
@@ -37,7 +39,9 @@
           <tr>
             <td>@log.Date</td>
             <td>@log.Employee</td>
+            <td>@log.WorkType</td>
             <td>@log.Hours</td>
+            <td>@log.HourlyRate $</td>
           </tr>
         }
         </tbody>
