Fixed some integration tests, but needs some more work

--- a/src/TimeReporting/Pages/Account/Login.cshtml
+++ b/src/TimeReporting/Pages/Account/Login.cshtml
@@ -24,7 +24,7 @@
                 </div>
                 <div class="checkbox mb-3">
                     <label asp-for="Input.RememberMe" class="form-label">
-                        <input class="form-check-input" asp-for="Input.RememberMe" />
+                        <input class="form-check-input" data-testid="remember-me-checkbox" asp-for="Input.RememberMe" />
                         @Html.DisplayNameFor(m => m.Input.RememberMe)
                     </label>
                 </div>
