--- a/src/TimeReporting/Pages/Account/Register.cshtml
+++ b/src/TimeReporting/Pages/Account/Register.cshtml
@@ -16,19 +16,19 @@
         <span asp-validation-for="Input.Email" class="text-danger"></span>
       </div>
       <div class="form-floating mb-3">
-        <input asp-for="Input.FullName" class="form-control" autocomplete="username" data-testid="email-input"
-               aria-required="true" placeholder="name@example.com"/>
+        <input asp-for="Input.FullName" class="form-control" autocomplete="fullname" data-testid="fullname-input"
+               aria-required="true" placeholder="John Wick"/>
         <label asp-for="Input.FullName">Full Name</label>
         <span asp-validation-for="Input.FullName" class="text-danger"></span>
       </div>
       <div class="form-floating mb-3">
-        <input asp-for="Input.PhoneNumber" class="form-control" autocomplete="username" data-testid="email-input"
-               aria-required="true" placeholder="name@example.com"/>
+        <input asp-for="Input.PhoneNumber" class="form-control" autocomplete="phone" data-testid="phone-input"
+               aria-required="true" placeholder="0987654321"/>
         <label asp-for="Input.PhoneNumber">Phone Number</label>
         <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
       </div>
       <div class="form-floating mb-3">
-        <input asp-for="Input.Password" class="form-control" autocomplete="new-password" data-testid="password-input"
+        <input asp-for="Input.Password" class="form-control" autocomplete="password" data-testid="password-input"
                aria-required="true" placeholder="password"/>
         <label asp-for="Input.Password">Password</label>
         <span asp-validation-for="Input.Password" class="text-danger"></span>
